cabal-version: 3.0
license:       LicenseRef-AllRightsReserved
name:          helliott
version:       0.0.1
copyright:     (c) 2020-2020 Federico Mastellone
author:        Federico Mastellone
maintainer:    fmaste@gmail.com
build-type:    Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        time,
        async,
        bytestring,
        case-insensitive,
        base16-bytestring,
        cryptohash-sha256,
        text,
        scientific,
        aeson,
        http-types,
        http-client,
        http-client-tls,
        postgresql-simple >= 0.6
    exposed-modules:
    exposed: True
    other-modules:
        Network.Binance.API
        Network.Binance.API.Types
    ghc-options: -Wall
    ghc-prof-options:
    ghc-shared-options:

Executable BinanceUpdater
    main-is: BinanceUpdater.hs
    hs-source-dirs: main src
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        time,
        async,
        bytestring,
        case-insensitive,
        base16-bytestring,
        cryptohash-sha256,
        text,
        scientific,
        aeson,
        http-types,
        http-client,
        http-client-tls,
        postgresql-simple >= 0.6
    other-modules:
        Database.Binance
        Database.Helliott
        Network.Binance.API
        Network.Binance.API.Types
    ghc-options: -Wall -threaded
    ghc-prof-options:
    ghc-shared-options:

Executable BinanceMono
    main-is: BinanceMono.hs
    hs-source-dirs: main src
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        time,
        async,
        bytestring,
        case-insensitive,
        base16-bytestring,
        cryptohash-sha256,
        text,
        scientific,
        aeson,
        http-types,
        http-client,
        http-client-tls,
        postgresql-simple >= 0.6
    other-modules:
        Database.Binance
        Database.Helliott
        Network.Binance.API
        Network.Binance.API.Types
    ghc-options: -Wall -threaded
    ghc-prof-options:
    ghc-shared-options:
